--- a/checkout.html
+++ b/checkout.html
@@ -274,6 +274,26 @@
 <!-- CHECKOUT: END -->
 
 
+<!-- CHECKOUT MODAL: START -->
+<div id="checkoutModal" class="modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Success!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p style="color: green;">Thank you for your order!</p>
+            </div>
+            <div class="modal-footer">
+                <button id="checkoutModal-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- CHOOSE COUNTRY MODAL: END -->
+
+
 <!-- CHOOSE COUNTRY MODAL: START -->
 <div class="modal fade" id="defaultModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
