--- a/rewards.html
+++ b/rewards.html
@@ -386,7 +386,7 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/newsletter.js"></script>
+    <script src="js/leaderboard.js"></script>
     <script src="js/contact.js"></script>
 </body>
 </html>
